[package]
name = "abc251"
version = "0.1.0"
edition = "2021"

# dependencies added to new project 
[dependencies]
proconio = { version = "0.4.3", features = ["derive"] }
competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
lazy_static = "1.4.0"
superslice = "1.0.0"
itertools = "0.10.3" 

[profile.release]
lto = true
panic = 'abort'
